# sky

./: .gitignore  .mxproject  CMakeLists.txt  Nucleo Debug.launch  README.md  nucleo.ioc
Core/Src/: main.c  retarget.c  usart.c
Debug/: Nucleo.elf  Nucleo.list  Nucleo.map  makefile  objects.list
Debug/Core/Src/: main.cyclo  main.d  main.su  retarget.cyclo  retarget.d  subdir.mk  syscalls.cyclo  syscalls.su
HowTo/: CMake.md  HowTo.md  SoftwareDevelopementLifeCycle.md  SoftwareTestingLifeCycle.md
Nucleo/: .cproject  .mxproject  Nucleo Debug.launch  Nucleo.ioc
Nucleo/Core/Src/: main.c  syscalls.c
OSAL/: CMakeLists.txt  OSAL.c  OSAL.h
SoftwareProduct/LSTime/: CMakeLists.txt  GSI.SoftwareComponents.pdsc
SoftwareProduct/LSTime/documentations/: LSTime.md  LSTime_API.md
SoftwareProduct/LSTime/interfaces/: LSTime_API.h
SoftwareProduct/LSTime/sources/: LSTime.c  LSTime.h  LSTime_CLI.c  LSTime_CLI.h
SoftwareProduct/Shell/: CMakeLists.txt
SoftwareProduct/Shell/interfaces/: Shell_API.c  Shell_API.h
SoftwareProduct/Shell/sources/: Archive_CLI.c  Archive_CLI.h  Default_CLI.c  Default_CLI.h  FIFO.h  List.c  List.h  Object.c  Object.h  Parameters.h  Shell.c  Shell.h  Shell_IO.c  Shell_IO.h  execution.c  getopt.c  getopt.h  main.c
SoftwareProduct/SoftwareComponent/: -CMakeLists.txt  CMakeLists.txt  SoftwareComponentConfig.cmake
SoftwareProduct/SoftwareComponent/configuration/: SoftwareComponent_Config.h
SoftwareProduct/SoftwareComponent/interfaces/: CMakeLists.txt  SoftwareComponent_API.h
SoftwareProduct/SoftwareComponent/sources/: CMakeLists.txt  SoftwareComponent.c  SoftwareComponent.h  main.c
SoftwareProduct/Track/: CMakeLists.txt  Track Config.cmake  TrackConfig.cmake
SoftwareProduct/Track/documentation/: Track.md
SoftwareProduct/Track/interfaces/: Track_API.h
SoftwareProduct/Track/sources/: Coordinates.h  Track.c  Track_CLI  Track_CLI.c
Unity/: CMakeLists.txt
body/: CMakeLists.txt  body.c
cmake/: arm-none-eabi-gcc.cmake  gcc-arm-none-eabi.cmake  settings.cmake  toolchain.cmake
cmake/stm32cubemx/: CMakeLists.txt
common/: CMakeLists.txt  common.h
documentation/: HowToUserUSBSerialPortWithMacOSX.md  Package.md  References.md  TermsAndDefinitions.md
documentations/: 3DPrinter.md  Crosscompilation.md  Raspberry.md  Toolbench.md
gauss/: CMakeLists.txt  gauss.c  gauss.h
intercept/: CMakeLists.txt  intercept.c  intercept.h
json/: CMakeLists.txt  json.c  json.h
kepler/: CMakeLists.txt  kepler.c  kepler.h
lstime/: CMakeLists.txt  LSTime.c  LSTime.h
lstime/doc/: LSTime.md
main/: CMakeLists.txt  main.c
math/: CMakeLists.txt  math.c  math.h
module/: CMakeLists.txt  module.c  module.h
node/: CMakeLists.txt  node.c  node.h
orbit/: CMakeLists.txt  orbit.c  orbit.h
script/: CPKG.json  DPKG.json  build.sh  cypher.sh  parameters.ini
scripts/: build-macosx.sh  build-nucleo.sh  build.sh  main.c  path.sh
shell/: CMakeLists.txt  shell.c  shell_config.h
site/: CMakeLists.txt  site.c  site.h
tests/: CMakeLists.txt
tests/ModuleTests/: AverageThreeBytesTests.c  CMakeLists.txt
tests/UtilsTests/: CMakeLists.txt  DMSTests.c  RadiansTests.c  UtilsTests.c
tests/datasets/: track_start.csv
tests/suite_1/: CMakeLists.txt
track/: CMakeLists.txt  track.c  track.h  track_cmd.c
trajectory/: CMakeLists.txt
utils/: Angle.c  Angle.h  CMakeLists.txt
