cmake_minimum_required(VERSION 3.0)

set (This sky)
set(TARGET_GROUP production CACHE STRING "Group to build")

project("${This}Project" C)
    

add_subdirectory(body)
#add_subdirectory(catlogues)
add_subdirectory(gauss)
add_subdirectory(intercept)
add_subdirectory(kepler)
add_subdirectory(lstime)
add_subdirectory(node)
add_subdirectory(orbit)
add_subdirectory(OSAL)
add_subdirectory(shell)
add_subdirectory(site)
add_subdirectory(SQLite)
add_subdirectory(track)
add_subdirectory(trajectory)
add_subdirectory(utils)

if(TARGET_GROUP STREQUAL release)
    add_subdirectory(main)
elseif(TARGET_GROUP STREQUAL debug)
    add_subdirectory(main)
elseif(TARGET_GROUP STREQUAL test)
    include(CTest)
    add_subdirectory(Unity)
    add_subdirectory(tests)
else()
    message(FATAL_ERROR "Given TARGET_GROUP unknown")
endif()
